--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Weather Dashboard Mobile</title>
+<title>Pastel Weather Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
@@ -13,10 +13,19 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient(135deg, #74ebd5, #ACB6E5);
     min-height: 100vh;
-    color: #fff;
     padding: 1em;
+    background: linear-gradient(135deg, #FFD3B6, #FFAAA5, #A8E6CF, #DCE775);
+    background-size: 400% 400%;
+    animation: gradientShift 20s ease infinite;
+    color: #fff;
+}
+
+/* --- Gradient Animation --- */
+@keyframes gradientShift {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
 
 /* --- Header --- */
@@ -24,7 +33,7 @@ h1 {
     font-size: 2em;
     margin-bottom: 1em;
     text-align: center;
-    text-shadow: 1px 1px 8px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 10px rgba(0,0,0,0.2);
 }
 
 /* --- Cards --- */
@@ -36,27 +45,28 @@ h1 {
     margin-bottom: 1.5em;
 }
 .card {
-    background: rgba(255,255,255,0.15);
-    backdrop-filter: blur(12px);
-    border-radius: 20px;
+    background: rgba(255,255,255,0.25);
+    backdrop-filter: blur(15px);
+    border-radius: 25px;
     padding: 1.5em;
     text-align: center;
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    transition: transform 0.3s ease;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
-.card:hover { transform: scale(1.03); }
-.label { font-weight: 600; font-size: 1.1em; margin-bottom: 0.3em; }
+.card:hover { transform: scale(1.05); box-shadow: 0 12px 25px rgba(0,0,0,0.25); }
+
+.label { font-weight: 600; font-size: 1.1em; margin-bottom: 0.3em; color: #fff; }
 .value { font-size: 2.5em; font-weight: 700; }
-.unit { font-size: 1.1em; color: rgba(255,255,255,0.7); }
-#temperature-value { color: #ff8c42; }
-#humidity-value { color: #42caff; }
+.unit { font-size: 1.1em; color: rgba(255,255,255,0.8); }
+#temperature-value { color: #FF9A8B; }
+#humidity-value { color: #80D0C7; }
 
 /* --- Status message --- */
 .status-message {
-    background: rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.2);
     padding: 10px 15px;
-    border-radius: 15px;
-    backdrop-filter: blur(12px);
+    border-radius: 20px;
+    backdrop-filter: blur(15px);
     margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
@@ -66,10 +76,10 @@ h1 {
 table {
     width: 100%;
     border-collapse: collapse;
-    border-radius: 15px;
+    border-radius: 20px;
     overflow: hidden;
-    background: rgba(255,255,255,0.15);
-    backdrop-filter: blur(12px);
+    background: rgba(255,255,255,0.2);
+    backdrop-filter: blur(15px);
     box-shadow: 0 6px 18px rgba(0,0,0,0.2);
     margin-bottom: 1.5em;
 }
@@ -77,16 +87,16 @@ th, td {
     padding: 10px 12px;
     text-align: center;
 }
-th { background: rgba(255,255,255,0.2); font-weight: 600; color: #fff; }
-tr:hover { background: rgba(255,255,255,0.2); transition: 0.3s; }
+th { background: rgba(255,255,255,0.3); font-weight: 600; color: #fff; }
+tr:hover { background: rgba(255,255,255,0.15); transition: 0.3s; }
 
 /* --- Chart --- */
 #chart-container {
     width: 100%;
     padding: 15px;
-    background: rgba(255,255,255,0.15);
-    border-radius: 20px;
-    backdrop-filter: blur(12px);
+    background: rgba(255,255,255,0.2);
+    border-radius: 25px;
+    backdrop-filter: blur(15px);
     box-shadow: 0 8px 20px rgba(0,0,0,0.2);
     margin-bottom: 2em;
 }
@@ -100,7 +110,7 @@ tr:hover { background: rgba(255,255,255,0.2); transition: 0.3s; }
 </head>
 <body>
 
-<h1>Weather Dashboard</h1>
+<h1>Pastel Weather Dashboard</h1>
 
 <div class="container">
     <div class="card">
@@ -140,8 +150,8 @@ const MAX_HISTORY = 20;
 // --- Chart.js setup ---
 const ctx = document.getElementById('weatherChart').getContext('2d');
 const chartData = { labels: [], datasets: [
-    { label: 'Temperature (°C)', data: [], borderColor:'#ff8c42', backgroundColor:'rgba(255,140,66,0.3)', tension:0.4 },
-    { label: 'Humidity (%)', data: [], borderColor:'#42caff', backgroundColor:'rgba(66,202,255,0.3)', tension:0.4 }
+    { label: 'Temperature (°C)', data: [], borderColor:'#FF9A8B', backgroundColor:'rgba(255,154,139,0.3)', tension:0.4 },
+    { label: 'Humidity (%)', data: [], borderColor:'#80D0C7', backgroundColor:'rgba(128,208,199,0.3)', tension:0.4 }
 ]};
 const weatherChart = new Chart(ctx,{
     type:'line',
@@ -218,6 +228,9 @@ async function fetchData(){
         document.getElementById('status-message').textContent="Error fetching data";
     }
 }
+<div class="footer">
+    <p>Create By: 168 & 196</p>
+</div>
 
 loadHistory();
 setInterval(fetchData, 5000);
