--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@ body {
     min-height: 100vh;
     padding: 1em;
     /* Gradient พาสเทลชมพู → ม่วง → ฟ้า */
-    background: linear-gradient(135deg, #FFB6C1, #CBA3D6, #A8D5FA);
+    background: linear-gradient(135deg, #ffd1dc, #caa0f1, #a8f0ff);
     background-size: 400% 400%;
     animation: gradientShift 20s ease infinite;
     color: #fff;
+    transition: background 0.5s ease;
 }
 
 /* Gradient Animation */
@@ -29,12 +30,19 @@ body {
     100% { background-position: 0% 50%; }
 }
 
+/* Fade-in Animation */
+@keyframes fadeInUp {
+    from { opacity:0; transform: translateY(20px); }
+    to { opacity:1; transform: translateY(0); }
+}
+
 /* Header */
 h1 {
-    font-size: 2em;
+    font-size: 2.2em;
     margin-bottom: 1em;
     text-align: center;
-    text-shadow: 1px 1px 10px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 12px rgba(0,0,0,0.2);
+    animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Cards */
@@ -46,70 +54,79 @@ h1 {
     margin-bottom: 1.5em;
 }
 .card {
-    background: rgba(255,255,255,0.25);
-    backdrop-filter: blur(15px);
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(20px);
     border-radius: 25px;
-    padding: 1.5em;
+    padding: 2em;
     text-align: center;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+    transition: all 0.3s ease;
+    animation: fadeInUp 0.6s ease forwards;
 }
-.card:hover { transform: scale(1.05); box-shadow: 0 12px 25px rgba(0,0,0,0.25); }
+.card:hover { 
+    transform: translateY(-5px); 
+    box-shadow: 0 15px 35px rgba(0,0,0,0.25); 
+}
 
-.label { font-weight: 600; font-size: 1.1em; margin-bottom: 0.3em; color: #fff; }
-.value { font-size: 2.5em; font-weight: 700; }
-.unit { font-size: 1.1em; color: rgba(255,255,255,0.8); }
+.label { font-weight: 600; font-size: 1.2em; margin-bottom: 0.5em; color: #fff; }
+.value { font-size: 3em; font-weight: 700; text-shadow: 1px 1px 8px rgba(0,0,0,0.2);}
+.unit { font-size: 1.1em; color: rgba(255,255,255,0.7); }
 #temperature-value { color: #FF9A8B; }
 #humidity-value { color: #80D0C7; }
 
 /* Status message */
 .status-message {
-    background: rgba(255,255,255,0.2);
-    padding: 10px 15px;
+    background: rgba(255,255,255,0.15);
+    padding: 12px 20px;
     border-radius: 20px;
-    backdrop-filter: blur(15px);
+    backdrop-filter: blur(20px);
     margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
+    animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Table */
 table {
     width: 100%;
-    border-collapse: collapse;
-    border-radius: 20px;
+    border-collapse: separate;
+    border-spacing: 0;
+    border-radius: 15px;
     overflow: hidden;
-    background: rgba(255,255,255,0.2);
-    backdrop-filter: blur(15px);
-    box-shadow: 0 6px 18px rgba(0,0,0,0.2);
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
     margin-bottom: 1.5em;
+    animation: fadeInUp 0.6s ease forwards;
 }
-th, td { padding: 10px 12px; text-align: center; }
-th { background: rgba(255,255,255,0.3); font-weight: 600; color: #fff; }
-tr:hover { background: rgba(255,255,255,0.15); transition: 0.3s; }
+th, td { padding: 12px 15px; text-align: center; }
+th { background: rgba(255,255,255,0.25); font-weight: 600; color: #fff; }
+tr:hover { background: rgba(255,255,255,0.2); transition: 0.3s; }
 
 /* Chart */
 #chart-container {
     width: 100%;
-    padding: 15px;
-    background: rgba(255,255,255,0.2);
+    padding: 20px;
+    background: rgba(255,255,255,0.15);
     border-radius: 25px;
-    backdrop-filter: blur(15px);
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
+    backdrop-filter: blur(20px);
+    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
     margin-bottom: 2em;
+    animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Footer */
 .footer {
     margin-top: 2em;
-    padding: 10px 20px;
-    background: rgba(255,255,255,0.2);
-    backdrop-filter: blur(12px);
+    padding: 12px 25px;
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(15px);
     border-radius: 15px;
     text-align: center;
     font-weight: 500;
     color: #fff;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+    animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Responsive */
@@ -165,10 +182,13 @@ const MAX_HISTORY = 20;
 
 // Chart.js setup
 const ctx = document.getElementById('weatherChart').getContext('2d');
-const chartData = { labels: [], datasets: [
-    { label: 'Temperature (°C)', data: [], borderColor:'#FF9A8B', backgroundColor:'rgba(255,154,139,0.3)', tension:0.4 },
-    { label: 'Humidity (%)', data: [], borderColor:'#80D0C7', backgroundColor:'rgba(128,208,199,0.3)', tension:0.4 }
-]};
+const chartData = { 
+    labels: [], 
+    datasets: [
+        { label: 'Temperature (°C)', data: [], borderColor:'#FF9A8B', backgroundColor:'rgba(255,154,139,0.25)', tension:0.4 },
+        { label: 'Humidity (%)', data: [], borderColor:'#80D0C7', backgroundColor:'rgba(128,208,199,0.25)', tension:0.4 }
+    ]
+};
 const weatherChart = new Chart(ctx,{
     type:'line',
     data: chartData,
