--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Weather Dashboard</title>
+<title>Pastel Cartoon Weather Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
@@ -15,12 +15,10 @@ body {
     align-items: center;
     min-height: 100vh;
     padding: 1em;
-    /* Gradient พาสเทลชมพู → ม่วง → ฟ้า */
     background: linear-gradient(135deg, #ffd1dc, #caa0f1, #a8f0ff);
     background-size: 400% 400%;
     animation: gradientShift 20s ease infinite;
     color: #fff;
-    transition: background 0.5s ease;
 }
 
 /* Gradient Animation */
@@ -38,7 +36,7 @@ body {
 
 /* Header */
 h1 {
-    font-size: 2.2em;
+    font-size: 2.4em;
     margin-bottom: 1em;
     text-align: center;
     text-shadow: 1px 1px 12px rgba(0,0,0,0.2);
@@ -49,40 +47,43 @@ h1 {
 .container {
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
     width: 100%;
     margin-bottom: 1.5em;
 }
 .card {
-    background: rgba(255,255,255,0.15);
+    position: relative;
+    background: rgba(255,255,255,0.2);
     backdrop-filter: blur(20px);
-    border-radius: 25px;
+    border-radius: 30px;
     padding: 2em;
     text-align: center;
-    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+    box-shadow: 0 12px 35px rgba(0,0,0,0.15);
     transition: all 0.3s ease;
     animation: fadeInUp 0.6s ease forwards;
+    border: 4px dashed rgba(255,255,255,0.5); /* การ์ตูนกรอบเส้นประ */
 }
 .card:hover { 
     transform: translateY(-5px); 
-    box-shadow: 0 15px 35px rgba(0,0,0,0.25); 
+    box-shadow: 0 18px 45px rgba(0,0,0,0.25); 
 }
 
-.label { font-weight: 600; font-size: 1.2em; margin-bottom: 0.5em; color: #fff; }
-.value { font-size: 3em; font-weight: 700; text-shadow: 1px 1px 8px rgba(0,0,0,0.2);}
-.unit { font-size: 1.1em; color: rgba(255,255,255,0.7); }
-#temperature-value { color: #FF9A8B; }
+.label { font-weight: 600; font-size: 1.3em; margin-bottom: 0.5em; color: #fff; }
+.value { font-size: 3.2em; font-weight: 700; text-shadow: 1px 1px 8px rgba(0,0,0,0.2);}
+.unit { font-size: 1.1em; color: rgba(255,255,255,0.8); }
+#temperature-value { color: #FFB6C1; }
 #humidity-value { color: #80D0C7; }
 
 /* Status message */
 .status-message {
-    background: rgba(255,255,255,0.15);
-    padding: 12px 20px;
-    border-radius: 20px;
-    backdrop-filter: blur(20px);
+    background: rgba(255,255,255,0.2);
+    padding: 14px 22px;
+    border-radius: 25px;
+    backdrop-filter: blur(25px);
     margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
+    border: 3px dashed rgba(255,255,255,0.5); /* กรอบการ์ตูน */
     animation: fadeInUp 0.6s ease forwards;
 }
 
@@ -91,12 +92,13 @@ table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0;
-    border-radius: 15px;
+    border-radius: 20px;
     overflow: hidden;
-    background: rgba(255,255,255,0.15);
+    background: rgba(255,255,255,0.2);
     backdrop-filter: blur(20px);
-    box-shadow: 0 6px 20px rgba(0,0,0,0.15);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.15);
     margin-bottom: 1.5em;
+    border: 4px dashed rgba(255,255,255,0.5); /* กรอบการ์ตูน */
     animation: fadeInUp 0.6s ease forwards;
 }
 th, td { padding: 12px 15px; text-align: center; }
@@ -106,39 +108,41 @@ tr:hover { background: rgba(255,255,255,0.2); transition: 0.3s; }
 /* Chart */
 #chart-container {
     width: 100%;
-    padding: 20px;
-    background: rgba(255,255,255,0.15);
-    border-radius: 25px;
+    padding: 25px;
+    background: rgba(255,255,255,0.2);
+    border-radius: 30px;
     backdrop-filter: blur(20px);
-    box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+    box-shadow: 0 12px 35px rgba(0,0,0,0.15);
     margin-bottom: 2em;
+    border: 4px dashed rgba(255,255,255,0.5); /* กรอบการ์ตูน */
     animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Footer */
 .footer {
     margin-top: 2em;
-    padding: 12px 25px;
-    background: rgba(255,255,255,0.15);
-    backdrop-filter: blur(15px);
-    border-radius: 15px;
+    padding: 15px 30px;
+    background: rgba(255,255,255,0.2);
+    backdrop-filter: blur(20px);
+    border-radius: 20px;
     text-align: center;
     font-weight: 500;
     color: #fff;
-    box-shadow: 0 6px 18px rgba(0,0,0,0.15);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+    border: 3px dashed rgba(255,255,255,0.5); /* กรอบการ์ตูน */
     animation: fadeInUp 0.6s ease forwards;
 }
 
 /* Responsive */
 @media (min-width: 600px) {
     .container { flex-direction: row; justify-content: center; }
-    .card { flex: 1 1 200px; max-width: 220px; }
+    .card { flex: 1 1 220px; max-width: 250px; }
 }
 </style>
 </head>
 <body>
 
-<h1>Pastel Weather Dashboard</h1>
+<h1>🌈 Pastel Cartoon Weather Dashboard 🌈</h1>
 
 <div class="container">
     <div class="card">
@@ -159,9 +163,9 @@ tr:hover { background: rgba(255,255,255,0.2); transition: 0.3s; }
 <table id="history-table">
     <thead>
         <tr>
-            <th>Time</th>
-            <th>Temp (°C)</th>
-            <th>Humidity (%)</th>
+            <th>Time ⏰</th>
+            <th>Temp 🌡️</th>
+            <th>Humidity 💧</th>
         </tr>
     </thead>
     <tbody></tbody>
@@ -173,19 +177,18 @@ tr:hover { background: rgba(255,255,255,0.2); transition: 0.3s; }
 
 <!-- Footer -->
 <div class="footer">
-    <p>Create By : 66030178 & 66030196</p>
+    <p>Created By : 66030178 & 66030196 🎨</p>
 </div>
 
 <script>
 const BACKEND_BASE = "https://dht-69wz.onrender.com";
 const MAX_HISTORY = 20;
 
-// Chart.js setup
 const ctx = document.getElementById('weatherChart').getContext('2d');
 const chartData = { 
     labels: [], 
     datasets: [
-        { label: 'Temperature (°C)', data: [], borderColor:'#FF9A8B', backgroundColor:'rgba(255,154,139,0.25)', tension:0.4 },
+        { label: 'Temperature (°C)', data: [], borderColor:'#FFB6C1', backgroundColor:'rgba(255,182,193,0.25)', tension:0.4 },
         { label: 'Humidity (%)', data: [], borderColor:'#80D0C7', backgroundColor:'rgba(128,208,199,0.25)', tension:0.4 }
     ]
 };
@@ -199,7 +202,6 @@ const weatherChart = new Chart(ctx,{
     }
 });
 
-// Load history
 async function loadHistory(){
     try{
         const res = await fetch(`${BACKEND_BASE}/history?limit=${MAX_HISTORY}`, {cache:"no-store"});
@@ -231,7 +233,6 @@ async function loadHistory(){
     }
 }
 
-// Fetch latest data every 5s
 async function fetchData(){
     try{
         const res = await fetch(`${BACKEND_BASE}/data`, {cache:"no-store"});
@@ -239,7 +240,6 @@ async function fetchData(){
         if(data.temperature!==null) document.getElementById('temperature-value').textContent = Number(data.temperature).toFixed(1);
         if(data.humidity!==null) document.getElementById('humidity-value').textContent = Number(data.humidity).toFixed(0);
 
-        // Update table
         const tbody = document.querySelector("#history-table tbody");
         const newRow = document.createElement("tr");
         newRow.innerHTML = `<td>${new Date().toLocaleTimeString()}</td>
@@ -248,7 +248,6 @@ async function fetchData(){
         tbody.insertBefore(newRow, tbody.firstChild);
         if(tbody.rows.length > MAX_HISTORY) tbody.deleteRow(tbody.rows.length - 1);
 
-        // Update chart
         const time = new Date().toLocaleTimeString();
         chartData.labels.push(time);
         chartData.datasets[0].data.push(Number(data.temperature).toFixed(1));
