--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@ h1 {
 }
 .card {
     position: relative;
-    background: rgba(255,255,255,0.7);
+    background: linear-gradient(145deg, #FFD1DC, #FFB6C1); /* พาสเทลชมพู gradient */
     border-radius: 30px;
     padding: 2em;
     text-align: center;
-    box-shadow: 0 12px 35px rgba(0,0,0,0.1);
+    box-shadow: 0 8px 25px rgba(255,182,193,0.4); /* เงาพาสเทล */
+    border: 4px dashed rgba(255,105,180,0.6); /* เส้นประสีชมพู */
+    color: #333;
     transition: all 0.3s ease;
     animation: fadeInUp 0.6s ease forwards;
-    border: 4px dashed rgba(150,150,150,0.5);
-    color: #333;
 }
-.card:hover { 
-    transform: translateY(-5px); 
-    box-shadow: 0 18px 45px rgba(0,0,0,0.15); 
+.card:hover {
+    transform: translateY(-5px) rotate(-1deg);
+    box-shadow: 0 12px 35px rgba(255,105,180,0.5);
 }
 
 .label { font-weight: 600; font-size: 1.3em; margin-bottom: 0.5em; }
@@ -68,13 +68,13 @@ h1 {
 
 /* Status message */
 .status-message {
-    background: rgba(255,255,255,0.7);
+    background: linear-gradient(145deg, #FFF1C8, #FFE0A8);
     padding: 14px 22px;
     border-radius: 25px;
     margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
-    border: 3px dashed rgba(150,150,150,0.5);
+    border: 3px dashed rgba(255,180,50,0.5);
     animation: fadeInUp 0.6s ease forwards;
     color: #333;
 }
@@ -86,24 +86,24 @@ table {
     border-spacing: 0;
     border-radius: 20px;
     overflow: hidden;
-    background: rgba(255,255,255,0.7);
-    box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+    background: linear-gradient(135deg, #C8F7D2, #A8EFC4); /* พาสเทลเขียว gradient */
+    box-shadow: 0 6px 20px rgba(50,200,180,0.25);
     margin-bottom: 1.5em;
-    border: 4px dashed rgba(150,150,150,0.5);
+    border: 4px double rgba(50,200,180,0.6); /* เส้น double line */
 }
 th, td { padding: 12px 15px; text-align: center; color: #333; }
-th { background: rgba(255,255,255,0.6); font-weight: 600; }
-tr:hover { background: rgba(255,255,255,0.5); transition: 0.3s; }
+th { background: rgba(255,255,255,0.2); font-weight: 600; }
+tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
 
-/* Chart */
+/* Chart container */
 #chart-container {
     width: 100%;
     padding: 25px;
-    background: rgba(255,255,255,0.7);
+    background: linear-gradient(145deg, #D0F0FD, #A8E6FF); /* พาสเทลฟ้า gradient */
     border-radius: 30px;
-    box-shadow: 0 12px 35px rgba(0,0,0,0.1);
+    box-shadow: 0 10px 30px rgba(168,230,255,0.3);
     margin-bottom: 2em;
-    border: 4px dashed rgba(150,150,150,0.5);
+    border: 4px dashed rgba(51,196,188,0.6);
     animation: fadeInUp 0.6s ease forwards;
 }
 
@@ -111,13 +111,13 @@ tr:hover { background: rgba(255,255,255,0.5); transition: 0.3s; }
 .footer {
     margin-top: 2em;
     padding: 15px 30px;
-    background: rgba(255,255,255,0.7);
+    background: linear-gradient(135deg, #FFF1C8, #FFE0A8); /* พาสเทลเหลือง gradient */
     border-radius: 20px;
     text-align: center;
     font-weight: 500;
     color: #333;
-    box-shadow: 0 8px 25px rgba(0,0,0,0.1);
-    border: 3px dashed rgba(150,150,150,0.5);
+    box-shadow: 0 8px 25px rgba(255,200,100,0.25);
+    border: 3px dashed rgba(255,180,50,0.5);
     animation: fadeInUp 0.6s ease forwards;
 }
 
@@ -252,7 +252,7 @@ async function fetchData(){
     }
 }
 
-// ฟังก์ชันเปลี่ยนพื้นหลังตามเวลา
+// เปลี่ยนพื้นหลังตามเวลา
 function updateBackgroundByTime(){
     const hour = new Date().getHours();
     let bg;
