--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pastel Cartoon Weather Dashboard</title>
+<title>Weather Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <style>
@@ -16,7 +16,7 @@ body {
     min-height: 100vh;
     padding: 1em;
     color: #333;
-    transition: background 2s ease; /* สำหรับเปลี่ยนพื้นหลังนุ่ม */
+    transition: background 2s ease;
 }
 
 /* Fade-in Animation */
@@ -35,7 +35,7 @@ h1 {
     color: #444;
 }
 
-/* Cards */
+/* Cards wavy */
 .container {
     display: flex;
     flex-direction: column;
@@ -45,12 +45,12 @@ h1 {
 }
 .card {
     position: relative;
-    background: linear-gradient(145deg, #FFD1DC, #FFB6C1); /* พาสเทลชมพู gradient */
-    border-radius: 30px;
+    background: linear-gradient(145deg, #FFD1DC, #FFB6C1);
+    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%; /* wavy curve */
     padding: 2em;
     text-align: center;
-    box-shadow: 0 8px 25px rgba(255,182,193,0.4); /* เงาพาสเทล */
-    border: 4px dashed rgba(255,105,180,0.6); /* เส้นประสีชมพู */
+    box-shadow: 0 8px 25px rgba(255,182,193,0.4);
+    border: 4px solid rgba(255,105,180,0.6);
     color: #333;
     transition: all 0.3s ease;
     animation: fadeInUp 0.6s ease forwards;
@@ -70,26 +70,26 @@ h1 {
 .status-message {
     background: linear-gradient(145deg, #FFF1C8, #FFE0A8);
     padding: 14px 22px;
-    border-radius: 25px;
+    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
     margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
-    border: 3px dashed rgba(255,180,50,0.5);
+    border: 3px solid rgba(255,180,50,0.5);
     animation: fadeInUp 0.6s ease forwards;
     color: #333;
 }
 
-/* Table */
+/* Table wavy */
 table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0;
-    border-radius: 20px;
+    border-radius: 40px 10px 40px 10px / 30% 50% 30% 50%; /* wavy curve */
     overflow: hidden;
-    background: linear-gradient(135deg, #C8F7D2, #A8EFC4); /* พาสเทลเขียว gradient */
+    background: linear-gradient(135deg, #C8F7D2, #A8EFC4);
     box-shadow: 0 6px 20px rgba(50,200,180,0.25);
     margin-bottom: 1.5em;
-    border: 4px double rgba(50,200,180,0.6); /* เส้น double line */
+    border: 4px solid rgba(50,200,180,0.6);
 }
 th, td { padding: 12px 15px; text-align: center; color: #333; }
 th { background: rgba(255,255,255,0.2); font-weight: 600; }
@@ -99,25 +99,25 @@ tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
 #chart-container {
     width: 100%;
     padding: 25px;
-    background: linear-gradient(145deg, #D0F0FD, #A8E6FF); /* พาสเทลฟ้า gradient */
-    border-radius: 30px;
+    background: linear-gradient(145deg, #D0F0FD, #A8E6FF);
+    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
     box-shadow: 0 10px 30px rgba(168,230,255,0.3);
     margin-bottom: 2em;
-    border: 4px dashed rgba(51,196,188,0.6);
+    border: 4px solid rgba(51,196,188,0.6);
     animation: fadeInUp 0.6s ease forwards;
 }
 
-/* Footer */
+/* Footer wavy */
 .footer {
     margin-top: 2em;
     padding: 15px 30px;
-    background: linear-gradient(135deg, #FFF1C8, #FFE0A8); /* พาสเทลเหลือง gradient */
-    border-radius: 20px;
+    background: linear-gradient(135deg, #FFF1C8, #FFE0A8);
+    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
     text-align: center;
     font-weight: 500;
     color: #333;
     box-shadow: 0 8px 25px rgba(255,200,100,0.25);
-    border: 3px dashed rgba(255,180,50,0.5);
+    border: 3px solid rgba(255,180,50,0.5);
     animation: fadeInUp 0.6s ease forwards;
 }
 
@@ -130,7 +130,7 @@ tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
 </head>
 <body>
 
-<h1>🌈 Pastel Cartoon Weather Dashboard 🌈</h1>
+<h1>☀️💧 Weather Dashboard</h1>
 
 <div class="container">
     <div class="card">
@@ -163,9 +163,8 @@ tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
     <canvas id="weatherChart"></canvas>
 </div>
 
-<!-- Footer -->
 <div class="footer">
-    <p>Created By : 66030178 & 66030196 🎨</p>
+    <p>Created By : 66030178 & 66030196</p>
 </div>
 
 <script>
@@ -252,22 +251,20 @@ async function fetchData(){
     }
 }
 
-// เปลี่ยนพื้นหลังตามเวลา
 function updateBackgroundByTime(){
     const hour = new Date().getHours();
     let bg;
-    if(hour>=6 && hour<12) bg = 'linear-gradient(135deg, #FFFAE3, #FFF5C2)';        // เช้า
-    else if(hour>=12 && hour<18) bg = 'linear-gradient(135deg, #D0F0FD, #A8E6FF)';   // กลางวัน
-    else if(hour>=18 && hour<21) bg = 'linear-gradient(135deg, #FFD1DC, #FFB3C1)';   // เย็น
-    else bg = 'linear-gradient(135deg, #C8F7D2, #A8EFC4)';                           // กลางคืน
+    if(hour>=6 && hour<12) bg = 'linear-gradient(135deg, #FFFAE3, #FFF5C2)';
+    else if(hour>=12 && hour<18) bg = 'linear-gradient(135deg, #D0F0FD, #A8E6FF)';
+    else if(hour>=18 && hour<21) bg = 'linear-gradient(135deg, #FFD1DC, #FFB3C1)';
+    else bg = 'linear-gradient(135deg, #C8F7D2, #A8EFC4)';
     document.body.style.background = bg;
 }
 
-// เริ่มโหลด
 loadHistory();
 setInterval(fetchData, 5000);
 updateBackgroundByTime();
-setInterval(updateBackgroundByTime, 60000); // อัปเดตทุก 1 นาที
+setInterval(updateBackgroundByTime, 60000);
 </script>
 
 </body>
