--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ h1 {
     color: #444;
 }
 
-/* Cards wavy */
+/* Cards */
 .container {
     display: flex;
     flex-direction: column;
@@ -46,11 +46,11 @@ h1 {
 .card {
     position: relative;
     background: linear-gradient(145deg, #FFD1DC, #FFB6C1);
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%; /* wavy curve */
+    border-radius: 30px;
     padding: 2em;
     text-align: center;
     box-shadow: 0 8px 25px rgba(255,182,193,0.4);
-    border: 4px solid rgba(255,105,180,0.6);
+    border: 4px dashed rgba(255,105,180,0.6);
     color: #333;
     transition: all 0.3s ease;
     animation: fadeInUp 0.6s ease forwards;
@@ -70,26 +70,26 @@ h1 {
 .status-message {
     background: linear-gradient(145deg, #FFF1C8, #FFE0A8);
     padding: 14px 22px;
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
+    border-radius: 25px;
     margin-bottom: 1.5em;
     font-weight: 500;
     text-align: center;
-    border: 3px solid rgba(255,180,50,0.5);
+    border: 3px dashed rgba(255,180,50,0.5);
     animation: fadeInUp 0.6s ease forwards;
     color: #333;
 }
 
-/* Table wavy */
+/* Table */
 table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0;
-    border-radius: 40px 10px 40px 10px / 30% 50% 30% 50%; /* wavy curve */
+    border-radius: 20px;
     overflow: hidden;
     background: linear-gradient(135deg, #C8F7D2, #A8EFC4);
     box-shadow: 0 6px 20px rgba(50,200,180,0.25);
     margin-bottom: 1.5em;
-    border: 4px solid rgba(50,200,180,0.6);
+    border: 4px double rgba(50,200,180,0.6);
 }
 th, td { padding: 12px 15px; text-align: center; color: #333; }
 th { background: rgba(255,255,255,0.2); font-weight: 600; }
@@ -100,24 +100,24 @@ tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
     width: 100%;
     padding: 25px;
     background: linear-gradient(145deg, #D0F0FD, #A8E6FF);
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
+    border-radius: 30px;
     box-shadow: 0 10px 30px rgba(168,230,255,0.3);
     margin-bottom: 2em;
-    border: 4px solid rgba(51,196,188,0.6);
+    border: 4px dashed rgba(51,196,188,0.6);
     animation: fadeInUp 0.6s ease forwards;
 }
 
-/* Footer wavy */
+/* Footer */
 .footer {
     margin-top: 2em;
     padding: 15px 30px;
     background: linear-gradient(135deg, #FFF1C8, #FFE0A8);
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
+    border-radius: 20px;
     text-align: center;
     font-weight: 500;
     color: #333;
     box-shadow: 0 8px 25px rgba(255,200,100,0.25);
-    border: 3px solid rgba(255,180,50,0.5);
+    border: 3px dashed rgba(255,180,50,0.5);
     animation: fadeInUp 0.6s ease forwards;
 }
 
