--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@ body {
     flex-direction: column;
     align-items: center;
     min-height: 100vh;
-    padding: 1em;
+    padding: 2em;
+    background: linear-gradient(135deg, #f0f2f5, #d9e2ec);
     color: #333;
     transition: background 2s ease;
 }
@@ -27,54 +28,56 @@ body {
 
 /* Header */
 h1 {
-    font-size: 2.4em;
-    margin-bottom: 1em;
+    font-size: 2.6em;
+    margin-bottom: 1.5em;
     text-align: center;
-    text-shadow: 1px 1px 6px rgba(0,0,0,0.15);
+    color: #1f2937;
     animation: fadeInUp 0.6s ease forwards;
-    color: #444;
 }
 
 /* Cards */
 .container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 25px;
     width: 100%;
-    margin-bottom: 1.5em;
+    margin-bottom: 2em;
 }
 .card {
     position: relative;
-    background: linear-gradient(145deg, #FFD1DC, #FFB6C1);
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%; /* wavy curve */
-    padding: 2em;
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(15px);
+    border-radius: 25px;
+    padding: 2.5em;
     text-align: center;
-    box-shadow: 0 8px 25px rgba(255,182,193,0.4);
-    color: #333;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.08);
+    color: #1f2937;
     transition: all 0.3s ease;
     animation: fadeInUp 0.6s ease forwards;
 }
 .card:hover {
-    transform: translateY(-5px) rotate(-1deg);
-    box-shadow: 0 12px 35px rgba(255,105,180,0.5);
+    transform: translateY(-5px);
+    box-shadow: 0 16px 40px rgba(0,0,0,0.12);
 }
 
 .label { font-weight: 600; font-size: 1.3em; margin-bottom: 0.5em; }
-.value { font-size: 3.2em; font-weight: 700; }
+.value { font-size: 3em; font-weight: 700; }
 .unit { font-size: 1.1em; color: #555; }
-#temperature-value { color: #FF6B81; }
-#humidity-value { color: #33C4BC; }
+#temperature-value { color: #f43f5e; }
+#humidity-value { color: #0ea5e9; }
 
 /* Status message */
 .status-message {
-    background: linear-gradient(145deg, #FFF1C8, #FFE0A8);
-    padding: 14px 22px;
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
-    margin-bottom: 1.5em;
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(12px);
+    padding: 16px 24px;
+    border-radius: 25px;
+    margin-bottom: 2em;
     font-weight: 500;
     text-align: center;
+    color: #1f2937;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.07);
     animation: fadeInUp 0.6s ease forwards;
-    color: #333;
 }
 
 /* Table */
@@ -82,23 +85,25 @@ table {
     width: 100%;
     border-collapse: separate;
     border-spacing: 0;
-    border-radius: 40px 10px 40px 10px / 30% 50% 30% 50%; /* wavy curve */
+    border-radius: 20px;
     overflow: hidden;
-    background: linear-gradient(135deg, #C8F7D2, #A8EFC4);
-    box-shadow: 0 6px 20px rgba(50,200,180,0.25);
-    margin-bottom: 1.5em;
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(12px);
+    box-shadow: 0 8px 25px rgba(0,0,0,0.05);
+    margin-bottom: 2em;
 }
-th, td { padding: 12px 15px; text-align: center; color: #333; }
-th { background: rgba(255,255,255,0.2); font-weight: 600; }
-tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
+th, td { padding: 12px 15px; text-align: center; color: #1f2937; }
+th { font-weight: 600; background: rgba(255,255,255,0.1); }
+tr:hover { background: rgba(255,255,255,0.05); transition: 0.3s; }
 
 /* Chart container */
 #chart-container {
     width: 100%;
     padding: 25px;
-    background: linear-gradient(145deg, #D0F0FD, #A8E6FF);
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
-    box-shadow: 0 10px 30px rgba(168,230,255,0.3);
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(15px);
+    border-radius: 25px;
+    box-shadow: 0 12px 30px rgba(0,0,0,0.08);
     margin-bottom: 2em;
     animation: fadeInUp 0.6s ease forwards;
 }
@@ -107,12 +112,13 @@ tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
 .footer {
     margin-top: 2em;
     padding: 15px 30px;
-    background: linear-gradient(135deg, #FFF1C8, #FFE0A8);
-    border-radius: 50% 20% 50% 20% / 30% 50% 20% 50%;
+    background: rgba(255,255,255,0.15);
+    backdrop-filter: blur(12px);
+    border-radius: 25px;
     text-align: center;
     font-weight: 500;
-    color: #333;
-    box-shadow: 0 8px 25px rgba(255,200,100,0.25);
+    color: #1f2937;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.05);
     animation: fadeInUp 0.6s ease forwards;
 }
 
@@ -163,6 +169,7 @@ tr:hover { background: rgba(255,255,255,0.1); transition: 0.3s; }
 </div>
 
 <script>
+// --- JS logic เหมือนเดิม ---
 const BACKEND_BASE = "https://dht-69wz.onrender.com";
 const MAX_HISTORY = 20;
 
@@ -170,8 +177,8 @@ const ctx = document.getElementById('weatherChart').getContext('2d');
 const chartData = { 
     labels: [], 
     datasets: [
-        { label: 'Temperature (°C)', data: [], borderColor:'#FF6B81', backgroundColor:'rgba(255,107,129,0.25)', tension:0.4 },
-        { label: 'Humidity (%)', data: [], borderColor:'#33C4BC', backgroundColor:'rgba(51,196,188,0.25)', tension:0.4 }
+        { label: 'Temperature (°C)', data: [], borderColor:'#f43f5e', backgroundColor:'rgba(244,63,94,0.25)', tension:0.4 },
+        { label: 'Humidity (%)', data: [], borderColor:'#0ea5e9', backgroundColor:'rgba(14,165,233,0.25)', tension:0.4 }
     ]
 };
 const weatherChart = new Chart(ctx,{
@@ -249,10 +256,10 @@ async function fetchData(){
 function updateBackgroundByTime(){
     const hour = new Date().getHours();
     let bg;
-    if(hour>=6 && hour<12) bg = 'linear-gradient(135deg, #FFFAE3, #FFF5C2)';
-    else if(hour>=12 && hour<18) bg = 'linear-gradient(135deg, #D0F0FD, #A8E6FF)';
-    else if(hour>=18 && hour<21) bg = 'linear-gradient(135deg, #FFD1DC, #FFB3C1)';
-    else bg = 'linear-gradient(135deg, #C8F7D2, #A8EFC4)';
+    if(hour>=6 && hour<12) bg = 'linear-gradient(135deg, #f0f2f5, #d9e2ec)';
+    else if(hour>=12 && hour<18) bg = 'linear-gradient(135deg, #e0f7fa, #cfe8f3)';
+    else if(hour>=18 && hour<21) bg = 'linear-gradient(135deg, #fcefe3, #f9e6d4)';
+    else bg = 'linear-gradient(135deg, #d9e2ec, #f0f2f5)';
     document.body.style.background = bg;
 }
 
